[package]
name = "llg_companion"
version = "0.1.0"
authors = ["Kloenk <me@kloenk.de>"]
edition = "2018"

[dependencies]
clap = {version = "2.33.0", features = ["color"]}
toml = "0.5.1"
serde_json = "1.0"
serde = { version = "1.0.94" , features = ["derive"] }
bson = "0.13.0"
chrono = { version = "0.4.7", features = ["serde"] }
flate2 = { version = "1.0.9", features = ["rust_backend"], default-features = false }
base64 = "0.10.1"
reqwest = "0.9.18"
html5ever = "0.23.0"
mongodb = "0.3.12"